--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html><html><head>
-<script type='module' src='./mod/main.js'></script>
+<link rel="stylesheet" href="main.css">
+<script type="module" src="./mod/main.js"></script>
 </head><body></body></html>
